# AIFoundryAgent-ANF-SelfOps

./: .env.template  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  TODO.md  pyproject.toml  requirements.txt
agent_docs/: architecture.md  azure_sdk_patterns.md  cloud_design_patterns.md  deployment.md  security.md  testing_strategy.md
docs/: LAB_GUIDE.md  RBAC.md  architecture.mermaid  index.html  ops_guide_explanation.md  test_scenarios.md
infra/: main.bicep  parameters.json
scripts/: deploy.sh
src/: main.py
src/agent/: foundry_agent.py  instructions.py
src/anf_client/: client.py  models.py
src/config/: __init__.py
src/tools/: definitions.py  executor.py
tests/: test_tool_executor.py
